--- a/responsive-portfolio-website-ansel/assets/css/styles.css
+++ b/responsive-portfolio-website-ansel/assets/css/styles.css
@@ -112,14 +112,79 @@ img {
 }
 
 /*=============== THEME ===============*/
+.change-theme {
+  font-size: 1.25rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
 
-/*========== Variables Dark theme ==========*/
+.change-theme:hover {
+  color: var(--first-color);
+}
 
+/*========== Variables Light theme ==========*/
+body.light-theme {
+  --title-color: hsl(var(--second-hue), 15%, 15%);
+  --text-color: hsl(var(--second-hue), 8%, 35%);
+  --body-color: hsl(var(--second-hue), 100%, 99%);
+  --container-color: #fff;
+}
 /*========== 
     Color changes in some parts of 
     the website, in light theme
 ==========*/
 
+.light-theme .scroll-header {
+  box-shadow:  0 2px 4px hsla(0, 0%, 1%, 0.1);
+}
+
+.light-theme .nav__menu {
+  background-color: hsla(var(--second-hue), 32%, 90%, 0.8);
+}
+
+.light-theme .section__subtitle {
+  color: var(--text-color);
+}
+
+.light-theme .home__social-link {
+  box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, 0.1);
+}
+
+.light-theme .home__social::after,
+.light-theme .footer__social-link {
+  background-color: var(--title-color);
+}
+
+.light-theme .home__social-link,
+.light-theme .home__scroll,
+.light-theme .button,
+.light-theme .button:hover,
+.light-theme .footer__title,
+.light-theme .footer__link,
+.light-theme .footer__copy {
+  color: var(--title-color);
+}
+
+.light-theme .skills__content,
+.light-theme .services__card,
+.light-theme .work__card,
+.light-theme .active-work,
+.light-theme .testimonial__card,
+.light-theme .contact__card {
+  box-shadow: 0 2px 16px hsla(var(--second-hue), 48%, 8%, 0.1);
+} 
+
+.light-theme::-webkit-scrollbar {
+  background-color: hsla(var(--second-hue), 8%, 66%);
+}
+
+.light-theme::-webkit-scrollbar-thumb {
+  background-color: hsla(var(--second-hue), 8%, 54%);
+}
+
+.light-theme::-webkit-scrollbar-thumb:hover {
+  background-color: hsla(var(--second-hue), 8%, 44%);
+}
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 968px;
@@ -165,6 +230,7 @@ img {
   width: 100%;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
+  transition: .4s;
 }
 
 .nav {
@@ -216,12 +282,13 @@ img {
     hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
   );
   box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), 0.4);
+  color: var(--title-color);
 }
 
 /* Change background header */
 
 .scroll-header {
-   box-shadow: 0 4px 4px hsla(0,0%,4%,.3);
+  box-shadow: 0 4px 4px hsla(0, 0%, 4%, 0.3);
 }
 
 /*=============== HOME ===============*/
@@ -342,21 +409,21 @@ img {
 .button {
   display: inline-block;
   background-color: var(--first-color);
-  color:var(--body-color);
-  padding:  .75rem 1rem;
-  border-radius: .5rem;
+  color: var(--body-color);
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
   font-weight: var(--font-medium);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .button:hover {
   background-color: var(--first-color-alt);
-  color: var(--body-color)
+  color: var(--body-color);
 }
 .button--ghost {
   background-color: transparent;
   border: 2px solid var(--first-color);
-  color: var(--first-color)
+  color: var(--first-color);
 }
 /*=============== ABOUT ===============*/
 .about__container {
@@ -376,27 +443,27 @@ img {
 .about__info {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: .5rem;
+  gap: 0.5rem;
   margin-bottom: 2rem;
 }
 
 .about__box {
   background-color: var(--container-color);
-  border-radius: .75rem;
-  padding: .75rem .5rem;
+  border-radius: 0.75rem;
+  padding: 0.75rem 0.5rem;
 }
 
-.about__icon{
+.about__icon {
   font-size: 1.5rem;
   color: var(--first-color);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .about__title {
   font-size: var(--small-font-size);
 }
 
-.about__subtitle{
+.about__subtitle {
   font-size: var(--tiny-font-size);
 }
 
@@ -442,10 +509,10 @@ img {
 
 .skills .bxs-badge-check {
   font-size: 1rem;
-  color: var(--first-color)
+  color: var(--first-color);
 }
 
-.skills__name { 
+.skills__name {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   line-height: 18px;
@@ -478,29 +545,29 @@ img {
   font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
   cursor: pointer;
 }
 
 .services__button:hover .services__icon {
-  transform: translateX(.25rem);
+  transform: translateX(0.25rem);
 }
 
 .services__icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 /* Services modal */
 .services__modal {
   position: fixed;
   inset: 0;
-  background-color: hsla(var(--second-hue), 28%, 16%, .7);
+  background-color: hsla(var(--second-hue), 28%, 16%, 0.7);
   padding: 2rem 1rem;
   display: grid;
   place-items: center;
   visibility: hidden;
   opacity: 0;
-  transition: .4s;
+  transition: 0.4s;
   z-index: var(--z-modal);
 }
 
@@ -529,13 +596,13 @@ img {
 
 .services__modal-list {
   display: grid;
-  row-gap: .75rem;
+  row-gap: 0.75rem;
 }
 
 .services__modal-item {
   display: flex;
   align-items: flex-start;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
 .services__modal-icon {
   font-size: 1.5rem;
@@ -546,7 +613,7 @@ img {
   font-size: var(--small-font-size);
 }
 
-.services__modal-close { 
+.services__modal-close {
   position: absolute;
   right: 1.5rem;
   top: 1.5rem;
@@ -571,15 +638,15 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: .75rem;
+  column-gap: 0.75rem;
   margin-bottom: 2rem;
 }
 .work__item {
   cursor: pointer;
   color: var(--title-color);
-  padding: .25rem .75rem;
+  padding: 0.25rem 0.75rem;
   font-weight: var(--font-medium);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .work__card {
@@ -588,15 +655,15 @@ img {
   border-radius: 1rem;
 }
 
-.work__img{
+.work__img {
   border-radius: 1rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .work__title {
-  font-size : var(--normal-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .work__button {
@@ -605,23 +672,22 @@ img {
   font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  column-gap: .25rem;
-
+  column-gap: 0.25rem;
 }
 
-.work__button:hover .work__icon{
-  transform: translateX(.25rem);
+.work__button:hover .work__icon {
+  transform: translateX(0.25rem);
 }
 
 .work__icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 /* Active item work*/
 .active-work {
   background-color: var(--first-color);
-  color: var(--body-color)
+  color: var(--body-color);
 }
 
 /*=============== TESTIMONIAL ===============*/
@@ -632,7 +698,7 @@ img {
   margin-bottom: 3rem;
 }
 
-.testimonial__img{
+.testimonial__img {
   width: 60px;
   border-radius: 3rem;
   margin-bottom: 1rem;
@@ -641,13 +707,12 @@ img {
 .testimonial__name {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .testimonial__description {
   font-size: var(--small-font-size);
 }
-
 
 /* Swiper class */
 .swiper-pagination-bullet {
@@ -668,6 +733,7 @@ img {
 .contact__title {
   text-align: center;
   font-size: var(--h3-font-size);
+  margin-top: 2.5rem;
   margin-bottom: 1.5rem;
 }
 
@@ -679,18 +745,18 @@ img {
 .contact__card {
   background-color: var(--container-color);
   padding: 1rem;
-  border-radius: .75rem;
+  border-radius: 0.75rem;
   text-align: center;
 }
 
 .contact__card-icon {
   font-size: 2rem;
   color: var(--title-color);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .contact__card-title,
-.contact__card-data{
+.contact__card-data {
   font-size: var(--font-medium);
 }
 .contact__card-title {
@@ -698,7 +764,7 @@ img {
 }
 .contact__card-data {
   display: block;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .contact__button {
@@ -707,19 +773,19 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
 }
 
-.contact__button-icon{
+.contact__button-icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .contact__form-div {
   position: relative;
   margin-bottom: 2rem;
   height: 4rem;
-} 
+}
 
 .contact__form-input {
   position: absolute;
@@ -732,17 +798,17 @@ img {
   color: var(--text-color);
   outline: none;
   padding: 1.5rem;
-  border-radius: .75rem;
+  border-radius: 0.75rem;
   z-index: 1;
 }
 
 .contact__form-tag {
   position: absolute;
-  top: -.75rem;
+  top: -0.75rem;
   left: 1.25rem;
   font-size: var(--smaller-font-size);
-  padding: .25rem;
-  background-color:  var(--body-color);
+  padding: 0.25rem;
+  background-color: var(--body-color);
   z-index: 10;
 }
 
@@ -754,7 +820,7 @@ img {
   resize: none;
 }
 /*=============== FOOTER ===============*/
-.footer{
+.footer {
   background-color: var(--first-color);
 }
 
@@ -764,7 +830,7 @@ img {
 
 .footer__title,
 .footer__link {
-  color: var(--body-color)
+  color: var(--body-color);
 }
 
 .footer__title {
@@ -788,8 +854,8 @@ img {
 .footer__social-link {
   background-color: var(--body-color);
   color: var(--first-color);
-  padding: .25rem;
-  border-radius: .25rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
   font-size: 1rem;
   display: inline-flex;
 }
@@ -802,9 +868,22 @@ img {
   font-size: var(--smaller-font-size);
 }
 
-
 /*=============== SCROLL BAR ===============*/
 
+::-webkit-scrollbar {
+  width: 0.6rem;
+  border-radius: 0.5rem;
+  background-color: hsla(var(--second-hue), 8%, 38%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsla(var(--second-hue), 8%, 26%);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsla(var(--second-hue), 8%, 20%);
+}
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 
